# cmake_protobuf_example2

./: .gitignore  CMakeLists.txt  README.md  main.cc
cmake/: Dependencies.cmake  Protobuf.cmake
proto/: CMakeLists.txt  person.proto
